add thumbnail from url (#327)
